--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bcrypt>=4.3.0",
+    "psycopg2>=2.9.10",
+    "sqlalchemy>=2.0.43",
     "streamlit>=1.49.1",
 ]
