ajuste na biblioteca psycopg2-binary para deploy no streamlit cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,8 @@ pillow==11.3.0
     # via streamlit
 protobuf==6.32.0
     # via streamlit
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
+#psycopg2==2.9.10
     # via fintrack (pyproject.toml)
 pyarrow==21.0.0
     # via streamlit
