--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "bcrypt>=4.3.0",
+    "plotly>=6.5.0",
     "psycopg2-binary>=2.9.10",
     "sqlalchemy>=2.0.43",
     "streamlit>=1.49.1",
